Fixing banner spacing and layouts

--- a/source/css/scss/patterns/03-organisms/_offset-text-banner.scss
+++ b/source/css/scss/patterns/03-organisms/_offset-text-banner.scss
@@ -1,9 +1,13 @@
 .offset-text-banner {
   position: relative;
   .offset-text-banner__text {
+    width: 100%;
+    height: 100%;
+    @include breakpoint($display_large_up) {
+      width: 40%;
+      height: 225px;
+    }
     background-color: $background-gray;
-    width: 50%;
-    height: 225px;
     z-index: 1;
     padding: 30px;
     h5 {
@@ -17,32 +21,13 @@
     }
   }
   .offset-text-banner__img {
-    position: absolute;
-    top: 30px;
-    left: 30px;
-    z-index: -1;
-  }
-}
-
-@include breakpoint($display_medium){
-  .offset-text-banner {
-    .offset-text-banner__img {
-      display: none;
-    }
-    .offset-text-banner__text {
-      width: 100%;
-      height: 100%;
-    }
-  }
-}
-@include breakpoint($display_small){
-  .offset-text-banner {
-    .offset-text-banner__img {
-      display: none;
-    }
-    .offset-text-banner__text {
-      width: 100%;
-      height: 100%;
+    display: none;
+    @include breakpoint($display_large_up) {
+      display: block;
+      position: absolute;
+      top: 30px;
+      left: 30px;
+      z-index: -1;
     }
   }
 }
